# advent-of-python

./: .gitignore  LICENSE  Pipfile  README.md  aoc2020.ipynb  pyproject.toml
advent_of_code/: __init__.py  __main__.py  cli.py
advent_of_code/aoc2022/: day01.py  day02.py
advent_of_code/aoc2024/: aoc2024.ipynb
advent_of_code/aoc_utils/: __init__.py
aoc2020/: aoc2020.ipynb
aoc2022/: day01.py
tests/: test_date.py
