[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "advent_of_code"
authors = [{name = "Claudine Chionh", email = "info@claudinec.net"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "click ~=8.1"
]

[project.optional-dependencies]
dev = [
    "black ~=23.7",
    "mypy ~=1.4",
    "pytest ~=7.4"
]

[project.urls]
Home = "https://www.claudinec.net/"
